--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ python:
   - "3.4"
   - "3.5"
 install:
+  - if [[ $TRAVIS_PYTHON_VERSION == 3.2 ]]; then pip install 'requests<2.11.0'; fi
   - pip install -r requirements.txt
   - pip install responses
 script: python test.py
